--- a/public/css/style.css
+++ b/public/css/style.css
@@ -122,17 +122,17 @@ outline: none;
 }
 
 .submit{
-position: absolute;
-right: 15px;
-top: 13px;
-padding: 3px 10px;
+padding: 15px 50px;
 -webkit-border-radius: 30px;-moz-border-radius: 30px;border-radius: 30px;
 background: #ffffff;
 border: none;
 font-family: 'Lato', sans-serif;
-font-size: 14px;
+font-size: 16px;
 font-weight: bold;
 cursor: pointer;
+display: block;
+margin: 0 auto;
+/*height: 44px;*/
 }
 
 
